--- a/index.html
+++ b/index.html
@@ -102,10 +102,10 @@
             </section>
             <!--Links-->
             <section style="text-align: left;">
-                <a target="_bLank" href="#"></a><br>    
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
+                <a target="_bLank" href="https://fulcrumsurfschool.github.io/Fulcrum-Surf-s-new-ALL-DAY-SUMMER-SURF-CAMP-/">https://fulcrumsurfschool.github.io/Fulcrum-Surf-s-new-ALL-DAY-SUMMER-SURF-CAMP-/</a><br>    
+                <a target="_bLank" href="https://fulcrumsurf.s3.us-east-005.backblazeb2.com/Fulcrum+Surf%E2%80%99s+new+%E2%80%9CALL+DAY+SUMMER+SURF+CAMP%E2%80%9D!/index.html">https://fulcrumsurf.s3.us-east-005.backblazeb2.com/Fulcrum+Surf%E2%80%99s+new+%E2%80%9CALL+DAY+SUMMER+SURF+CAMP%E2%80%9D!/index.html</a><br>
+                <a target="_bLank" href="https://fulcrum-surf-s-new-all-d-git-1fd788-fulcrumsurfschools-projects.vercel.app/">https://fulcrum-surf-s-new-all-d-git-1fd788-fulcrumsurfschools-projects.vercel.app/</a><br>
+                <a target="_bLank" href="https://aesthetic-kringle-1a77ac.netlify.app/">https://aesthetic-kringle-1a77ac.netlify.app/</a><br>
             </section>
         <!---Sidebar-->
         <div class="side-bar">
